Fix: correct position of hidden visible elements

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -17,7 +17,7 @@
   height: auto;
   margin: 0;
   overflow: visible;
-  position: static;
+  position: relative;
   width: auto;
 }
 
